fix bug where x-axis label for grouped bar was being cropped

--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ p {
 #grouped-bar {
   width: 80vw;
   max-width: 700px;
-  height: 500px;
+  height: 540px;
   margin-top: 16px;
 }
 
